--- a/.github/workflows/release-to-devel.yaml
+++ b/.github/workflows/release-to-devel.yaml
@@ -8,10 +8,10 @@ on:
 jobs:
     checks:
         runs-on: ubuntu-latest
-        name: PHP checks
+        name: Check application
         steps:
             # Setup
-            -   uses: actions/checkout@v2
+            -   uses: actions/checkout@v3
 
             -   name: '[PHP] Setup'
                 uses: shivammathur/setup-php@v2
@@ -38,10 +38,10 @@ jobs:
 
     selenium-checks:
         runs-on: ubuntu-latest
-        name: PHP 8.1 - selenium checks
+        name: Check selenium
         steps:
             # Setup
-            -   uses: actions/checkout@v2
+            -   uses: actions/checkout@v3
 
             -   name: '[PHP] Setup'
                 uses: shivammathur/setup-php@v2
@@ -92,7 +92,7 @@ jobs:
         environment: devel
         steps:
             # Setup
-            -   uses: actions/checkout@v2
+            -   uses: actions/checkout@v3
 
             # Prepare .env file
             -   name: '[ENV] Prepare configuration file'
@@ -125,14 +125,17 @@ jobs:
     release:
         runs-on: ubuntu-latest
         name: Release deb package
+        timeout-minutes: 5
         needs:
             - checks
             - download-deploy-console
             - build
+        concurrency:
+            group: ${{ format('{0}-{1}', github.workflow, github.job) }}
         environment: devel
         steps:
             # Setup
-            -   uses: actions/checkout@v2
+            -   uses: actions/checkout@v3
 
             -   name: '[PHP] Setup PHP'
                 uses: shivammathur/setup-php@v2
@@ -193,7 +196,7 @@ jobs:
             # Release to devel
             -   name: '[RELEASE] Release deb to devel'
                 run: |
-                    ./deploy-console.phar d:release devel "Github release - ${{ github.ref_type }}: ${{ github.ref_name }}"
+                    ./deploy-console.phar d:release devel "Github release - ${{ github.ref_type }}: ${{ github.ref_name }}" -P
 
             # Notify
             -   name: Slack Notification - success
@@ -229,7 +232,7 @@ jobs:
         environment: devel
         steps:
             # Setup
-            -   uses: actions/checkout@v2
+            -   uses: actions/checkout@v3
 
             -   name: '[PHP] Setup PHP'
                 uses: shivammathur/setup-php@v2
